--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -94,7 +94,7 @@
                 <h3>01. 선언적 함수</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    function func() {
+<pre><code class="language-js">    function func() {
         document.write("함수가 실행되었습니다.1");
     } 
     func();
@@ -115,7 +115,7 @@
                 <h3>익명 함수</h3>
                 <p>배열을 사용</p>
                 <div class="script">
-<pre><code class="language.js">    const func = function() {
+<pre><code class="language-js">    const func = function() {
         document.write("함수가 실행되었습니다.2");
     }
     func();
@@ -136,7 +136,7 @@
                 <h3>03. 매개 변수 함수</h3>
                 <p>변수의 한 종류인 함수, 선언 생략 가능</p>
                 <div class="script">
-<pre><code class="language.js">    function func(str) {
+<pre><code class="language-js">    function func(str) {
         document.write(str);
     }
     func("함수가 실행되었습니다.3");
@@ -157,7 +157,7 @@
                 <h3>04. 리턴값 함수</h3>
                 <p>실행값 대신 결과값으로 출력</p>
                 <div class="script">
-<pre><code class="language.js">    function func() {
+<pre><code class="language-js">    function func() {
         const str = "함수가 실행되었습니다.4";
         return str;
     }
@@ -180,7 +180,7 @@
                 <p>선언적 함수 축약형 func 약식으로 씀
                 </p>
                 <div class="script">
-<pre><code class="language.js">    func = () => {
+<pre><code class="language-js">    func = () => {
         document.write("함수가 실행되었습니다.5");
     }
 </code></pre>
@@ -201,7 +201,7 @@
                 <p>익명 함수 축약형 func 약식으로 씀
                 </p>
                 <div class="script">
-<pre><code class="language.js">    const func = () => {
+<pre><code class="language-js">    const func = () => {
         document.write("함수가 실행되었습니다.6");
     }
     func();
@@ -223,7 +223,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    func = (str) => {
+<pre><code class="language-js">    func = (str) => {
         document.write("함수가 실행되었습니다.7");
     }
     func();
@@ -245,7 +245,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    func = () => {
+<pre><code class="language-js">    func = () => {
         const str = "함수가 실행되었습니다.8"
         return str;
     }
@@ -268,7 +268,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    const func = (str) => {
+<pre><code class="language-js">    const func = (str) => {
         return str;
     }
     document.write(func("함수가 실행되었습니다.9"));
@@ -290,7 +290,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    const func = (str) => {
+<pre><code class="language-js">    const func = (str) => {
         return str;    //결과 의미
     }
     document.write(func("함수가 실행되었습니다.10"));
@@ -312,7 +312,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    const func = (str) => str; //const 입력
+<pre><code class="language-js">    const func = (str) => str; //const 입력
 
     document.write(func("함수가 실행되었습니다.11"));
 </code></pre>
@@ -333,7 +333,7 @@
                 <p>
                 </p>
                 <div class="script">
-<pre><code class="language.js">    func = (str) => str; //const 삭제
+<pre><code class="language-js">    func = (str) => str; //const 삭제
 
     document.write(func("함수가 실행되었습니다.12<br>"));
 </code></pre>
