--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -119,7 +119,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">     //01
+<pre><code class="language-js">     //01
     const str1 = "자바스크립트";
     const str2 = "제이쿼리";
 
@@ -207,7 +207,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">    2
+<pre><code class="language-js">    2
 </code></pre>
                     </div>
                 </div>
