--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -111,7 +111,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">    // 01
+<pre><code class="language-js">    // 01
     const arrNum = [100, 200, 300, 400, 500];
 
     document.querySelector(".sample01_N1").innerHTML = "1";
@@ -188,7 +188,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500];
+<pre><code class="language-js">    const arrNum = [100, 200, 300, 400, 500];
     const text1 = arrNum.join('');
     const text2 = arrNum.join(' ');
     const text3 = arrNum.join('*');
@@ -262,7 +262,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">    // 01
+<pre><code class="language-js">    // 01
     const arrNum = [100, 200, 300, 400, 500]
     const arrPush = arrNum.push(600);
 
