--- a/javascript/study/function.html
+++ b/javascript/study/function.html
@@ -77,7 +77,7 @@
                 <h3 class="t_tit2">선언적 함수</h3>
                 <p class="t_tit3">선언적 함수는 함수를 호출할 때 함수의 앞 또는 뒤에 호출 가능</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    function func(){
+<pre><code class="language-js">    function func(){
         document.write("함수가 실행되었습니다.1");
     } 
     func();
@@ -98,7 +98,7 @@
                 <h3 class="t_tit2">익명 함수</h3>
                 <p class="t_tit3">익명 함수는 변수에 함수 데이터를 저장하여 마지 변수처럼 사용 가능 (배열을 사용)</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    const func = function(){
+<pre><code class="language-js">    const func = function(){
         document.write("함수가 실행되었습니다.2");
     }
     func();
@@ -120,7 +120,7 @@
                 <h3 class="t_tit2">매개 변수 함수</h3>
                 <p class="t_tit3">함수를 호출할 때 전달하는 변수를 매개 변수라 부른다.<br>변수의 한 종류인 함수, 선언 생략 가능</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    function func(str){
+<pre><code class="language-js">    function func(str){
         document.write(str);
     }
     func("함수가 실행되었습니다.3");
@@ -142,7 +142,7 @@
                 <h3 class="t_tit2">리턴값 함수</h3>
                 <p class="t_tit3">실행값 대신 결과값으로 출력</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    function func(){
+<pre><code class="language-js">    function func(){
         const str = "함수가 실행되었습니다.4";
         return str;
     }
@@ -166,7 +166,7 @@
                 <p class="t_tit3">선언적 함수를 예시로 들며, 축약형 func 약식으로 사용
                 </p><br>
                 <div class="t_code">
-<pre><code class="language.js">    func = () => {
+<pre><code class="language-js">    func = () => {
         document.write("함수가 실행되었습니다.5");
     }
 </code></pre>
