--- a/javascript/study/quiz01.html
+++ b/javascript/study/quiz01.html
@@ -30,7 +30,7 @@
                 데이터 값의 입력과 상수를 사용
             </p>
             <div class="t_code">
-<pre><code code="language.js">    // 선택자
+<pre><code class="language-js">    // 선택자
     const quizType = document.querySelector(".quiz__type");                                  // 퀴즈 종류
     const quizNumber = document.querySelector(".quiz__question .number");            // 퀴즈 번호
     const quizAsk = document.querySelector(".quiz__question .ask");                        // 퀴즈 질문
