--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -82,7 +82,7 @@
                 <h3>01. 변수 : 데이터 저장</h3>
                 <p>변수는 데이터를 저장하는 저장소 입니다. 이 저장소에는 숫자, 문자, 함수, 객체 등을 저장할 수 있습니다.</p>
                 <div class="script">
-                    <pre><code class="language.js">    var x = 100;             //변수 x에 숫자 100을 저장함
+<pre><code class="language-js">    var x = 100;             //변수 x에 숫자 100을 저장함
     var y = 200;             //변수 y에 숫자 200을 저장함
     var z = "javascript";   //변수 z에 문자열 "javascript"을 저장함
 
@@ -109,7 +109,7 @@
                 <h3>02. 변수 : 데이터 저장 + 데이터 변경</h3>
                 <p>변수는 데이터를 저장과 함께 변경도 가능합니다.</p>
                 <div class="script">
-                    <pre><code class="language.js">    let x = 100;
+                    <pre><code class="language-js">    let x = 100;
     let y = 200;
     let z = "javascript";
 
@@ -140,7 +140,7 @@
                 <h3>03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</h3>
                 <p>변수는 데이터를 저장, 변경 및 추가가 가능합니다.</p>
                 <div class="script">
-                    <pre><code class="language.js">    let x = 100;
+                    <pre><code class="language-js">    let x = 100;
     let y = 200;
     let z = "javascript";
 
@@ -173,7 +173,7 @@
                     지역 변수는 함수 블록{} 내에서만 사용 할 수 있습니다.
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    let x = 100;        //전역변수 
+                    <pre><code class="language-js">    let x = 100;        //전역변수 
     let y = 200;        //전역변수
 
     function func() {
@@ -222,7 +222,7 @@
                     상수의 값은 재지정할 수도 없습니다.
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const x = 100;
+                    <pre><code class="language-js">    const x = 100;
     const y = 200;
     const z = "javascript";
 
@@ -254,7 +254,7 @@
                 <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 첫번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const arr = new Array();     //빈 배열 객체 생성
+                    <pre><code class="language-js">    const arr = new Array();     //빈 배열 객체 생성
     arr[0] = 100;
     arr[1] = 200;
     arr[2] = "javascript";
@@ -283,7 +283,7 @@
                 <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 두번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const arr = new Array (100, 200, "javascript");
+                    <pre><code class="language-js">    const arr = new Array (100, 200, "javascript");
 
     document.write(arr[0]);
     document.write(arr[1]);
@@ -309,7 +309,7 @@
                 <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 세번째 방법 약식으로 작업
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const arr = [];
+                    <pre><code class="language-js">    const arr = [];
     arr[0] = 100;
     arr[0] = 200;
     arr[0] = "javascript";
@@ -338,7 +338,7 @@
                 <p>배열은 여러 개의 데이터를 저장할 수 있는 저장소. 네번째 방법 가장 많이 쓰는 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const arr = [100, 200, "javascript"]
+                    <pre><code class="language-js">    const arr = [100, 200, "javascript"]
 
     document.write(arr[0]);
     document.write(arr[1]);
@@ -365,7 +365,7 @@
                     첫번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = new Object();
+                    <pre><code class="language-js">    const obj = new Object();
     obj[0] = 100;
     obj[1] = 200;
     obj[2] = "javascript";
@@ -395,7 +395,7 @@
                     저장. 두번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = new Object();
+                    <pre><code class="language-js">    const obj = new Object();
     obj.a = 100;
     obj.b = 200;
     obj.c = "javascript";
@@ -425,7 +425,7 @@
                     세번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = {}
+                    <pre><code class="language-js">    const obj = {}
 
     obj.a = 100;
     obj.b = 200;
@@ -456,7 +456,7 @@
                     네번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = {a:100, b:200, c:"javascript"}
+                    <pre><code class="language-js">    const obj = {a:100, b:200, c:"javascript"}
 
     document.write(obj.a);
     document.write(obj.b);
@@ -483,7 +483,7 @@
                     다섯번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = [
+                    <pre><code class="language-js">    const obj = [
         {a:100, b:200},
         {c:"javascript"}
         ];
@@ -513,7 +513,7 @@
                     여섯번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = {
+                    <pre><code class="language-js">    const obj = {
         a: 100,
         b: [200, 300],
         c: {x: 400, y: 500},
@@ -551,7 +551,7 @@
                     일곱번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const a = 100;
+                    <pre><code class="language-js">    const a = 100;
     const b = 200;
     const c = "javascript";
 
@@ -582,7 +582,7 @@
                     여덟번째 방법
                 </p>
                 <div class="script">
-                    <pre><code class="language.js">    const obj = {
+                    <pre><code class="language-js">    const obj = {
             a : 100,
             b : [200, 300],
             c : {x:400, y:500},
