--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -75,7 +75,7 @@
                 <h3>01. if문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    if(0){
+<pre><code class="language-js">    if(0){
         document.write("실행되었습니다(true).");
     } else {
         document.write("실행되었습니다(false).");
@@ -98,7 +98,7 @@
                 <h3>02. if문 생략</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    const num = 100;
+<pre><code class="language-js">    const num = 100;
 
     if(num) document.write("실행되었습니다(true).");
     else document.write("실행되었습니다(false).");
@@ -120,7 +120,7 @@
                 <h3>03. 중 if문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    const num = 100;
+<pre><code class="language-js">    const num = 100;
 
     if(num == 90) {
             document.write("실행되었습니다(num==90).");
@@ -151,7 +151,7 @@
                 <h3>04. 중첩 if문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    const num = 100;
+<pre><code class="language-js">    const num = 100;
 
     if(num == 100) {
         document.write("실행되었습니다.(1)");
@@ -184,7 +184,7 @@
                 <h3>05. 삼향 연산자</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    if(num == 100) {
+<pre><code class="language-js">    if(num == 100) {
         document.write("true");
     }   else {
         document.write("false.");
@@ -209,7 +209,7 @@
                 <h3>06. switch문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    const num = 100;
+<pre><code class="language-js">    const num = 100;
 
     switch(num){
         case 100 :
@@ -245,7 +245,7 @@
                 <h3>07. while문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    let num = 1;
+<pre><code class="language-js">    let num = 1;
 
     while(num &lt;= 5){
         document.write("실행되었습니다.");
@@ -273,7 +273,7 @@
                 <h3>08. do while문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    let num = 1;
+<pre><code class="language-js">    let num = 1;
 
     do {
           document.write("실행되었습니다2.");
@@ -301,7 +301,7 @@
                 <h3>09. for문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    for(let i=1; i&lt;10; i++){
+<pre><code class="language-js">    for(let i=1; i&lt;10; i++){
         document.write(i+". 실행되었습니다.")
     }
 </code></pre>
@@ -331,7 +331,7 @@
                 <h3>10. 중첩 for문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    for(let i=1; i&lt;=2; i++){
+<pre><code class="language-js">    for(let i=1; i&lt;=2; i++){
         document.write(i + "실행");
             for(let j=1; j&lt;=5; j++){
                 document.write(j + "실행");
@@ -367,7 +367,7 @@
                 <h3>11. break문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    for(i=1; i&lt;=20; i++){
+<pre><code class="language-js">    for(i=1; i&lt;=20; i++){
         document.write(i);
         if(i === 10){   // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
             break;                
@@ -391,7 +391,7 @@
                 <h3>12. contiune문</h3>
                 <p></p>
                 <div class="script">
-<pre><code class="language.js">    for(i=1; i&lt;=20; i++){
+<pre><code class="language-js">    for(i=1; i&lt;=20; i++){
         if(i === 10){    // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
             contiune;   //해당하는 입력 값만 삭제
         }
