--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -94,7 +94,7 @@
             <!-- 99출력 -->
             <h3 class="t_tit2">0부터 99까지 출력하기</h3>
             <div class="t_code">
-<pre><code>    //0부터 99까지 출력하기
+<pre><code class="language-js">    //0부터 99까지 출력하기
     for(let i=0; i&lt;100; i++){
         document.write(i);
     }
@@ -120,7 +120,7 @@
             <!-- 100 출력 -->
             <h3 class="t_tit2">1부터 100까지 출력하기</h3>
             <div class="t_code">
-<pre><code>    //1부터 100까지 출력
+<pre><code class="language-js">    //1부터 100까지 출력
     for( let i=1; i&lt;=100; i++){
         document.write(i);
     }
@@ -146,7 +146,7 @@
             <h3 class="t_tit2">1부터 100까지 출력하기(짝수)</h3>
             <p class="t_desc">짝수로 출력할 때는 증가 값을 2로 해주면 된다.</p>
             <div class="t_code">
-<pre><code>    //1부터 100까지 출력(짝수) i = i + 2
+<pre><code class="language-js">    //1부터 100까지 출력(짝수) i = i + 2
     for( let i=2; i&lt;=100; i+=2){
         document.write(i);
     }
@@ -172,7 +172,7 @@
             <h3 class="t_tit2">1부터 100까지 출력하기(5의 배수는 빨간색, 7의 배수는 파란색)</h3>
             <p class="t_desc"></p>
             <div class="t_code">
-<pre><code>    for(let i=1; i&lt;=100; i++){
+<pre><code class="language-js">    for(let i=1; i&lt;=100; i++){
         if (i % 5 == 0) {
             document.write("&lt;span style='color: blue'&gt;"+i+"&lt;/span&gt;");
         }
@@ -206,7 +206,7 @@
             <h3 class="t_tit2">for문을 이용해서 1~100까지 출력 (짝수는 빨간색, 홀수는 파란색)</h3>
             <p class="t_desc"></p>
             <div class="t_code">
-<pre><code>    for(let i=1; i&lt;=100; i++){
+<pre><code class="language-js">    for(let i=1; i&lt;=100; i++){
         if (i % 2 == 0) {
             document.write("&lt;span style='color: red'&gt;"+i+"&lt;/span&gt;");
         }   else {
@@ -238,7 +238,7 @@
             <h3 class="t_tit2">for문을 이용해서 1~100까지 출력 (짝수는 빨간색, 홀수는 파란색) : 조건부 연산자</h3>
             <p class="t_dec"></p>
             <div class="t_code">
-<pre><code code="language.js">    {
+<pre><code code="language-js">    {
         for(let i=1; i&lt;=100; i++){
             if (i % 2 == 0) ? document.write("<span style='color: red'>"+i+"</span>") : document.write("<span style='color: blue'>"+i+"</span>")
         }
@@ -266,7 +266,7 @@
             <h3 class="t_tit2">for문을 이용해서 구구단 만들기</h3>
             <p class="t_dec">for문도 if문과 마찬가지로 for문안에 또 다른 for문을 중첩 사용 가능</p>
             <div class="t_code">
-<pre><code code="language.js">    for(let i=2; i&lt;=9; i++) {
+<pre><code class="language-js">    for(let i=2; i&lt;=9; i++) {
         for(let j=1; j&lt;=9; j++) {
             let sum = i * j;
             document.write(i + " * " + j + " = " + sum);
@@ -297,7 +297,7 @@
             <h3 class="t_tit2">for문을 이용해서 테이블 만들기</h3>
             <p class="t_dec">중첩 for문을 이용해서 테이블을 만들 수 있습니다.</p>
             <div class="t_code">
-<pre><code code="language.js">    let table = "&lt;table class='testTable'>";
+<pre><code class="language-js">    let table = "&lt;table class='testTable'>";
 
     table += "&lt;tr>"
     for (let i=1; i&lt;=10; i++) {
