--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -74,6 +74,9 @@
         }
 
         /* cardType02 */
+        img {
+            width: 100%;
+        }
         .card__inner {
             display: flex;
             flex-wrap: wrap;
@@ -87,8 +90,6 @@
             margin-bottom: 50px;
         }
         .card__inner .card img {
-            margin-bottom: 20px;
-            border-radius: 10px;
         }
         .card__inner .card .tit {
             font-size: 28px;
