--- a/class/index.html
+++ b/class/index.html
@@ -231,6 +231,16 @@
                             <img src="../assets/ico/icon31.jpg">
                         </a>
                     </div>
+                    <div class="col-xs-6 col-md-3">
+                        <a href="#" class="thumbnail">
+                            <img src="../assets/ico/icon32.jpg">
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-md-3">
+                        <a href="#" class="thumbnail">
+                            <img src="../assets/ico/icon33.jpg">
+                        </a>
+                    </div>
                     
                 </div>
                 <!-- //row -->
