--- a/site/cardType/cardType04.html
+++ b/site/cardType/cardType04.html
@@ -45,7 +45,8 @@
             padding: 0 20px;
             margin: 0 auto;
             background-color: #666;
-            margin-top: 500px;
+            margin-top: 60px;
+            display: flex;
         }
         .section {
             padding: 120px 0;
@@ -78,7 +79,7 @@
         }
         .card__inner .card {
             width: 24%;
-            position: absolute;
+            display: flex;
         }
         .card__inner img {
             width: 95px;
@@ -130,19 +131,19 @@
 <body>
     <section id="cardType04">
         <h2>cos</h2>
-            <div class="cardTop container01 noto">
+            <div class="card__inner container01 noto">
                 <article class="card01">
                     <div class="mainBan">
                         <img src="img/mainBa.jpg" alt="#">
                     </div>
                     <div class="cardTopCon">
-                        <p class="top__p01">COS</p>
-                        <h2 class="top__h2">Our suppliers Charity partnerships</h2>
-                        <p class="top__p02">Inclusion and diversity</p>
+                        <p class="desc">COS</p>
+                        <h2 class="tit">Our suppliers Charity partnerships</h2>
+                        <p class="desc">Inclusion and diversity</p>
                     </div>
                 </article>
             </div>
-            <div class="cardBottom container02 noto">
+            <div class="card__inner container02 noto">
                 <div class="card__inner">
                     <article class="card">
                         <div class="card__footer">
@@ -151,18 +152,18 @@
                             <img src="img/card_bg04_01.jpg" alt="ADVOCACY">
                         </div>
                         <div class="card__footer">
-                            <p>COLLABORATIONS</p>
-                            <h3>특별한 의미를 담은 익스클루시브 아이템을 제작</h3>
+                            <p class="desc">COLLABORATIONS</p>
+                            <h3 class="tit">특별한 의미를 담은 익스클루시브 아이템을 제작</h3>
                             <img src="img/card_bg04_02.jpg" alt="COLLABORATIONS">
                         </div>
                         <div class="card__footer">
-                            <p>OUR PROGRESS</p>
-                            <h3>더 나은 미래와 목표를 향해 노력하는 과정을 확인</h3>
+                            <p class="desc">OUR PROGRESS</p>
+                            <h3 class="tit">더 나은 미래와 목표를 향해 노력하는 과정을 확인</h3>
                             <img src="img/card_bg04_03.jpg" alt="OUR PROGRESS">
                         </div>
                         <div class="card__footer">
-                            <p class="card">THE LIFE CYCLE</p>
-                            <h3>연 소재 단계부터 완성된 제품 단계까지 환경 보호</h3>
+                            <p class="desc">THE LIFE CYCLE</p>
+                            <h3 class="tit">연 소재 단계부터 완성된 제품 단계까지 환경 보호</h3>
                             <img src="img/card_bg04_04.jpg" alt="THE LIFE CYCLE">
                         </div>
                     </article>
