--- a/class/index.html
+++ b/class/index.html
@@ -233,12 +233,17 @@
                     </div>
                     <div class="col-xs-6 col-md-3">
                         <a href="#" class="thumbnail">
-                            <img src="../assets/ico/icon32.jpg">
+                            <img src="../assets/ico/icon33.jpg">
                         </a>
                     </div>
                     <div class="col-xs-6 col-md-3">
                         <a href="#" class="thumbnail">
-                            <img src="../assets/ico/icon33.jpg">
+                            <img src="../assets/ico/icon34.jpg">
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-md-3">
+                        <a href="#" class="thumbnail">
+                            <img src="../assets/ico/icon35.jpg">
                         </a>
                     </div>
                     
