--- a/class/index.html
+++ b/class/index.html
@@ -168,6 +168,11 @@
                     <!-- // 1 -->
                     <div class="col-xs-6 col-md-3">
                         <a href="#" class="thumbnail">
+                            <img src="../assets/ico/icon36.jpg">
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-md-3">
+                        <a href="#" class="thumbnail">
                             <img src="../assets/ico/icon19.jpg">
                         </a>
                     </div>
