--- a/site/cardType/cardType04.html
+++ b/site/cardType/cardType04.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카드 유형 03</title>
+    <title>카드 유형04</title>
     <style>
-        /* 폰트 */
-        @import url('https://webfontworld.github.io/Noto/NotoSansKR.css');
-
-        .noto {
-            font-family: 'NotoSansKR';
-            font-weight: 500;
+        /* fonts */
+        @import url('https://webfontworld.github.io/sebang/SebangGothic.css');
+        @import url('https://webfontworld.github.io/NanumSquare/NanumSquare.css');
+        .sebang {
+            font-family: 'SebangGothic';
+            font-weight: 400;
         }
-
+        .square {
+            font-family: 'NanumSquare';
+            font-weight: 400;
+        }
         /* reset */
         * {
             margin: 0;
@@ -25,28 +28,17 @@
         }
         img {
             width: 100%;
+            vertical-align: top;
         }
         h1, h2, h3, h4, h5, h6 {
             font-weight: normal;
         }
-        .type2 {
-            padding-top: 10px;
-        }
-
         /* common */
-        .container01 {
+        .container {
             width: 1160px;
             padding: 0 20px;
             margin: 0 auto;
-            background-color: #444;
-        }
-        .container02 {
-            width: 1160px;
-            padding: 0 20px;
-            margin: 0 auto;
-            background-color: #666;
-            margin-top: 60px;
-            display: flex;
+            min-width: 1160px;
         }
         .section {
             padding: 120px 0;
@@ -64,111 +56,197 @@
             text-align: center;
             margin-bottom: 70px;
         }
+        .section > h2.title {
+            width: 1160px;
+            padding: 0 20px;
+            margin: 0 auto;
+            min-width: 1160px;
+            text-align: left;
+            font-size: 14px;
+            margin-bottom: 30px;
+        }
+        .section > h2.title span {
+            background: #000;
+            color: #fff;
+            display: inline-block;
+            padding: 5px 15px;
+            font-size: 12px;
+            font-family: "SebangGothic";
+        }
+        .section > h2.title span::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #000;
+        }
 
+        /* blind */
+        .blind {
+            position:absolute;
+            clip: rect(0 0 0 0);
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
+        }
         /* cardType04 */
-        img {
-            right: auto;
-        }
-        #cardType04 {
-            padding: 120px 120px;
-        }
         .card__inner {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
         }
-        .card__inner .card {
-            width: 24%;
+        .card.first {
+            width: 100%;
             display: flex;
-        }
-        .card__inner img {
-            width: 95px;
-            height: 100px;
-        }
-        .card01 {
-            width: 1160px;
-            height: 380px;
+            flex-wrap: wrap;
+            justify-content: space-between;
             margin-bottom: 30px;
-            overflow: hidden;
+            border-bottom: 1px solid #000;
+            padding-bottom: 30px;
         }
-        .card01 .mainBan {
-            width: 767px;
-            height: 380px;
-            margin-right: 20px;
+        .card.first .card__header {
+            width: 70%;
+        }
+        .card.first .card__contents {
+            width: 30%;
             position: relative;
         }
-        .card01 .mainBan img {
-            width: 767px;
-            height: 380px;
+        .card.first .card__contents .sub{
+            font-size: 14px;
+            line-height: 1;
+            margin-bottom: 10px;
+            display: block;
         }
-        .card01 .cardTopCon {
-            width: 373px;
-            height: 380px;
-            display: flex;
-        }
-        .card01 h2 {
-            font-size: 30px;
+        .card.first .card__contents .title{
+            font-size: 36px;
             line-height: 1.3;
-            margin: 10px 10px;
+            
         }
-        .card01 p {
-            font-size: 20px;
-            color: #fff;
+        .card.first .card__contents .desc {
+            font-size: 16px;
+            line-height: 1.5;
+            color: #666;
         }
-        .card02 {
-            width: 1160px;
-            height: 100px;
+        .card.first .card__contents .more {
+            display: none
+            ;
         }
-        .card02 .card__footer {
-            width: 275px;
-            height: 100px;
-            margin: 40px 20px 0 0;
-            background-color: #fff;
+        .card.first::before {
+            content: '';
+            width: 100px;
+            height: 1px;
+            background: #000;
             position: absolute;
+            left: 0;
+            top: 0;
+        }
+        .card.first::after {
+            content: '';
+            width: 100px;
+            height: 1px;
+            background: #000;
+            position: absolute;
+            left: 0;
+            top: -55;
+        }
+        .card {
+            width: 25%;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+        .card__header {
+            width: 28%;
+        }
+        .card__contents {
+            width: 70%;
+        }
+        .card__contents .sub {
+            display: none;
+        }
+        .card__contents .title {
+            font-family: "SebangGothic";
+            font-size: 22px;
+            margin-bottom: 5px;
+            margin-bottom: 10px;
+        }
+        .card__contents .desc {
+            font-size: 15px;
+            line-height: 1.5;
+            color: #666;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; 
+            -webkit-box-orient: vertical;
+        }
+        .card__contents .more {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <section id="cardType04">
-        <h2>cos</h2>
-            <div class="card__inner container01 noto">
-                <article class="card01">
-                    <div class="mainBan">
-                        <img src="img/mainBa.jpg" alt="#">
-                    </div>
-                    <div class="cardTopCon">
-                        <p class="desc">COS</p>
-                        <h2 class="tit">Our suppliers Charity partnerships</h2>
-                        <p class="desc">Inclusion and diversity</p>
-                    </div>
-                </article>
-            </div>
-            <div class="card__inner container02 noto">
-                <div class="card__inner">
-                    <article class="card">
-                        <div class="card__footer">
-                            <p>ADVOCACY</p>
-                            <h3>칼레이도스코프 재단부터 하우싱 웍스까지 오랜 시간 제작</h3>
-                            <img src="img/card_bg04_01.jpg" alt="ADVOCACY">
-                        </div>
-                        <div class="card__footer">
-                            <p class="desc">COLLABORATIONS</p>
-                            <h3 class="tit">특별한 의미를 담은 익스클루시브 아이템을 제작</h3>
-                            <img src="img/card_bg04_02.jpg" alt="COLLABORATIONS">
-                        </div>
-                        <div class="card__footer">
-                            <p class="desc">OUR PROGRESS</p>
-                            <h3 class="tit">더 나은 미래와 목표를 향해 노력하는 과정을 확인</h3>
-                            <img src="img/card_bg04_03.jpg" alt="OUR PROGRESS">
-                        </div>
-                        <div class="card__footer">
-                            <p class="desc">THE LIFE CYCLE</p>
-                            <h3 class="tit">연 소재 단계부터 완성된 제품 단계까지 환경 보호</h3>
-                            <img src="img/card_bg04_04.jpg" alt="THE LIFE CYCLE">
-                        </div>
-                    </article>
+    <section id="cardType04" class="card__wrap section square">
+        <h2 class="title">Travel Channel</h2>
+        <div class="card__inner container">
+            <article class="card first">
+                <figure class="card__header">
+                    <img src="img/card_bg04_01_big.jpg" alt="Travel Channel">
+                </figure>
+                <div class="card__contents">
+                    <span class="sub">Travel Channel</span>
+                    <h3 class="title">여행하기 좋은 나라 베스트 파이브</h3>
+                    <p class="desc">완벽한 휴일을 구상하고 있나요? 특별한 시간을 찾고 있다구요? 그렇다면 수많은 여행 관련 업체를 둘러봐야 하지 않을까요?</p>
+                    <a class="more" href="/"><span>더보기</span></a>
                 </div>
-            </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg04_02.jpg" alt="Travel Channel">
+                </figure>
+                <div class="card__contents">
+                    <span class="sub">Travel Channel</span>
+                    <h3 class="title">Clean Japan</h3>
+                    <p class="desc">완벽한 휴일을 구상하고 있나요? 특별한 시간을 찾고 있다구요? 그렇다면 수많은 여행 관련 업체를 둘러봐야 하지 않을까요?</p>
+                    <a class="more" href="/"><span>더보기</span></a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg04_03.jpg" alt="Travel Channel">
+                </figure>
+                <div class="card__contents">
+                    <span class="sub">Travel Channel</span>
+                    <h3 class="title">Clean Japan</h3>
+                    <p class="desc">완벽한 휴일을 구상하고 있나요? 특별한 시간을 찾고 있다구요? 그렇다면 수많은 여행 관련 업체를 둘러봐야 하지 않을까요?</p>
+                    <a class="more" href="/"><span>더보기</span></a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg04_04.jpg" alt="Travel Channel">
+                </figure>
+                <div class="card__contents">
+                    <span class="sub">Travel Channel</span>
+                    <h3 class="title">Clean Japan</h3>
+                    <p class="desc">완벽한 휴일을 구상하고 있나요? 특별한 시간을 찾고 있다구요? 그렇다면 수많은 여행 관련 업체를 둘러봐야 하지 않을까요?</p>
+                    <a class="more" href="/"><span>더보기</span></a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg04_05.jpg" alt="Travel Channel">
+                </figure>
+                <div class="card__contents">
+                    <span class="sub">Cool Dubai</span>
+                    <h3 class="title">Clean Japan</h3>
+                    <p class="desc">완벽한 휴일을 구상하고 있나요? 특별한 시간을 찾고 있다구요? 그렇다면 수많은 여행 관련 업체를 둘러봐야 하지 않을까요?</p>
+                    <a class="more" href="/"><span>더보기</span></a>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 </html>
