--- a/test02.html
+++ b/test02.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>내장 함수</title>
-    <script>
+&lt;!DOCTYPE html>
+&lt;html lang="ko">
+&lt;head>
+    &lt;meta charset="UTF-8">
+    &lt;title>내장 함수&lt;/title>
+    &lt;script>
         // 인코딩. 디코딩함수
         var encodeStr = '자바스크립트';
         console.log(encodeURIComponent(encodeStr));
@@ -38,8 +38,8 @@
         eval(str1);
         eval(str2);
         console.log(num7 + num8);
-    </script>
-</head>
-<body>  
-</body>
-</html>
+    &lt;/script>
+&lt;/head>
+&lt;body>  
+&lt;/body>
+&lt;/html>
