--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -262,7 +262,7 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "17",
-                answerAsk : "다음 설명의 ( ) 안에 알맞은 단어를 차례대로 나열한 것은?",
+                answerAsk : "다음 설명의 ( ) 안에 알맞은 단어를 차례대로 나열한 것은? / 설명 --> 1.붉은 적색은 불이라는 구체적인 대상을 연상하기 때문에 적색 계통의 색은 따뜻하게 느껴진다. 이러한 계통의 색을()라고 한다. 2.푸른 청색은 바다라는 구체적인 대상에서 연상되기 떄문에 청색 계통의 색은 차갑게 느끼게 된다. 이러한 계통의 색을 () 라고 한다.",
                 answerChoice : {
                     1: "warm color, cool color",
                     2: "vivid color, cool color",
@@ -275,7 +275,7 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "18",
-                answerAsk : "다음이 설정하고 있는 현상으로 옳은 것은?",
+                answerAsk : "다음이 설정하고 있는 현상으로 옳은 것은? / 보기 --> 1.망막에 상이 흐리게 맺혀 윤곽이 선명하게 보이지 않는다. 2.날이 저물기 직전의 약간 어두움이 깔리기 시작할 무렵에 작용한다. 3.추상체와 간상체가 동시에 활동한다. 4.색의 판단을 신뢰할 수 없다",
                 answerChoice : {
                     1: "백주시",
                     2: "명소시",
@@ -296,7 +296,7 @@
                     4: "수직선"
                 },
                 answerResult : "4",
-                answerEx : "직선 : 정적, 경직"<br>"수직선 : 긴장감, 상승"<br>"수평선 : 평온, 안정감, 평화로운 느낌"<br>"사선 : 활동적이고 불안정한 느낌"<br>"곡선 : 우아함, 부드러움, 동적인 느낌"
+                answerEx : "직선 : 정적, 경직 수직선 : 긴장감, 상승 수평선 : 평온, 안정감, 평화로운 느낌 사선 : 활동적이고 불안정한 느낌 곡선 : 우아함, 부드러움, 동적인 느낌"
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
@@ -327,7 +327,7 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "22",
-                answerAsk : "다음 설명과 관계가 없는 것은?",
+                answerAsk : "다음 설명과 관계가 없는 것은? / 설명 --> 정기적이고 자발적인 인터넷을 여행하며 정보를 수집하고, 수집한 정보를 검색 엔진의 데이터베이스에 저장하는 프로그램을 의미한다.",
                 answerChoice : {
                     1: "bug",
                     2: "crawler",
@@ -491,7 +491,7 @@
                     4: "6288delivery.net"
                 },
                 answerResult : "1",
-                answerEx : "도메인 네임 규칙"<br>"하이픈(-)과 영문자, 숫자로 조합가능하다."<br>"하이픈(-)로 끝나서는 안된다."
+                answerEx : "도메인 네임 규칙 하이픈(-)과 영문자, 숫자로 조합가능하다. 하이픈(-)로 끝나서는 안된다."
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
@@ -517,7 +517,7 @@
                     4: "WHOIS"
                 },
                 answerResult : "2",
-                answerEx : "메뉴형태로 정보를 검색할 수 있도록 정리해 놓은 것을 고퍼라고 합니다."<br>"FTP : 파일전송"<br>"TELNET : 원거리 접속"<br>"WHOIS : 사용중인 사용자 정보보기"
+                answerEx : "메뉴형태로 정보를 검색할 수 있도록 정리해 놓은 것을 고퍼라고 합니다. FTP : 파일전송 TELNET : 원거리 접속 WHOIS : 사용중인 사용자 정보보기"
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
@@ -530,7 +530,7 @@
                     4: "slice( )"
                 },
                 answerResult : "1",
-                answerEx : "concat( ): 현재 배열에 두 개 이상의 배열을 결합하여 하나의 배열 객체를 생성하여 반환"<br>"join( ) : 배열 요소들을 하나의 문자열로 반환"<br>"reverse( ): 배열의 값을 역순으로 변환"<br>"slice( ) : 배열의 일부분을 선택하여 새로운 배열을 만듬"
+                answerEx : "concat( ): 현재 배열에 두 개 이상의 배열을 결합하여 하나의 배열 객체를 생성하여 반환 join( ) : 배열 요소들을 하나의 문자열로 반환 reverse( ): 배열의 값을 역순으로 변환 slice( ) : 배열의 일부분을 선택하여 새로운 배열을 만듬"
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
@@ -673,12 +673,12 @@
                     4: "해상도는 bps로 나타낸다."
                 },
                 answerResult : "1",
-                answerEx : "픽셀 : 화면을 구성하는 가장 작은 단위"<br>"해상도 : 화면의 선명도를 의미하며, 숫자가 클 수록 이미지의 질은 고해상도가 됨."<br>"DPI : 해상도를 나타내는 단위."
+                answerEx : "픽셀 : 화면을 구성하는 가장 작은 단위 해상도 : 화면의 선명도를 의미하며, 숫자가 클 수록 이미지의 질은 고해상도가 됨. DPI : 해상도를 나타내는 단위."
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "49",
-                answerAsk : "다음은 무엇에 대한 설명인가?",
+                answerAsk : "다음은 무엇에 대한 설명인가? / 설명 --> 1.점묘와 같이 제한된 수의 색상들을 사용하여 다양한 색상을 시각적으로 섞어서 만들어 내는 것이다. 2.적은 수의 색상의 반복으로 그래픽 파일의 용량을 줄인다는 장점이 있다.",
                 answerChoice : {
                     1: "앨리어싱",
                     2: "디더링",
@@ -717,7 +717,7 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "52",
-                answerAsk : "다음 설명과 같은 애니메이션 기법은?",
+                answerAsk : "다음 설명과 같은 애니메이션 기법은? / 설명 --> 1.배경 그림은 그대로 두고 캐릭터만 움직이게 하는 기법 2.1915년 허드(Earl Hurd)가 고안 3.종이에 그린 그림을 셀룰로이드에 옮긴 뒤, 그 뒷면에 채색을 한 다음 배경 위에 놓고 촬영하는 기법",
                 answerChoice : {
                     1: "셀 에니메이션",
                     2: "그림 에니메이션",
@@ -743,7 +743,7 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "54",
-                answerAsk : "다음과 같은 특징을 가지고 있는 파일 포맷의 종류는?",
+                answerAsk : "다음과 같은 특징을 가지고 있는 파일 포맷의 종류는? / 보기 --> 전문 그래픽 출력장치 등을 위해 최적화된 포맷이며, 1200dpi이상의 고해상도 출력물을 프린팅할 경우에는 필수적이며 특히, CYMK의 4도 분판이 자유롭기 때문에 전문 그래픽 작업을 요하는 프로그램에서는 거의 대부분이 포맷을 지원한다.",
                 answerChoice : {
                     1: "PDF",
                     2: "DRW",
