--- a/javascript/study/structure.html
+++ b/javascript/study/structure.html
@@ -88,7 +88,13 @@
             
             <hr>
 
-            <h3 class="t_tit2">해당 구조들을 이용하여 레이아웃을 만들어 보겠습니다.</h3>
+            <h3 class="t_tit2">위 구조 요소를 이용하여 레이아웃 예시를 하나 만들어보겠습니다.</h3>
+            <p class="codepen" data-height="500" data-default-tab="css,result" data-slug-hash="MWVzaoM" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/kdb6/pen/MWVzaoM">
+              구조 관련 요소</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
         </div>    
     </main>
 
