--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -66,6 +66,10 @@
                 <li><a href="#">08. 이벤트 메서드 : addEventListener("drag") : 드래그 중일 시</a></li>
                 <li><a href="#">09. 이벤트 메서드 : addEventListener("dragstart") : 드래그 시작 시</a></li>
                 <li><a href="#">10. 이벤트 메서드 : addEventListener("dragend") : 드래그 끝날 시</a></li>
+                <br>
+                <li><a href="#">10. 이벤트 메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
+                <li><a href="#">10. 이벤트 메서드 : addEventListener("keypress") : 키 눌렀을 때(누르고 있을 시 계속 실행)</a></li>
+                <li><a href="#">10. 이벤트 메서드 : addEventListener("keyup") : 키 누르고 뗐을 때</a></li>
             </ul>
         </div>
     </main>
