--- a/javascript/study/jpp.html
+++ b/javascript/study/jpp.html
@@ -18,7 +18,7 @@
                 <h3 class="t_tit2">01. 배열 메서드 : join() : 배열 요소 문자열 결합 : 반환(문자열)</h3>
                 <p class="t_desc2">join() 메서드는 배열의 모든 요소 값을 문자열로 변경하며, 인수로 받은 문자로 연결해서 문장열로 반환한다.</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500];
+<pre><code class="language-js">    const arrNum = [100, 200, 300, 400, 500];
     const text1 = arrNum.join('');      // 기본값
     const text2 = arrNum.join(' ');     // 띄어쓰기
     const text3 = arrNum.join('*');     // *
@@ -60,7 +60,7 @@
                 <h3 class="t_tit2">02. 배열 메서드 : push()</h3>
                 <p class="t_desc2">push() 메서드는 배열의 끝에 하나 이상의 요소를 추가 후 배열의 새로운 길이를 반환한다.</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500]
+<pre><code class="language-js">    const arrNum = [100, 200, 300, 400, 500]
     const arrPush = arrNum.push(600);
 
     document.querySelector(".sample01_M1").innerHTML = "push(600)";
@@ -93,7 +93,7 @@
                 <h3 class="t_tit2">03. 배열 메서드 : pop()</h3>
                 <p class="t_desc2">pop() 메서드는 배열에서 마지막 요소를 제거하고 그 요소를 반환한다.</p><br>
                 <div class="t_code">
-<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500]
+<pre><code class="language-js">    const arrNum = [100, 200, 300, 400, 500]
     const arrPush = arrNum.pop();
 
     document.querySelector(".sample03_M1").innerHTML = "pop()";
