--- a/javascript/study/toto.html
+++ b/javascript/study/toto.html
@@ -15,29 +15,48 @@
 
             <!-- 01 -->
             <div id="sample01" class="sample">
-                <h3 class="t_tit2">indexOf()</h3>
-                <p class="t_desc2">문자열에서 특정 문자의 위치를 찾고 숫자를 반환하는 메서드이다.</p>
-                <p class="t_box">
-                    "문자열".index(검색값)<br>
-                    "문자열".index(검색값, 위치값)
-                </p><br><br>
-
-                <p class="t_desc2">아래 사진은 문자에 위치를 숫자로 표시하였으며, 공백 또한 포함된다.</p>
+                <h3 class="t_tit2">toUpperCase() / toLowerCase()</h3>
+                <p class="t_desc2">문자열을 대문자로 변경 : 반환(문자열) / 문자열을 소문자로 변경 : 반환(문자열)</p>
+                <table class="t_table">
+                    <thead>
+                        <tr>
+                            <th class="ce">번호</th>
+                            <th class="ce">기본값</th>
+                            <th class="ce">메서드</th>
+                            <th class="ce">리턴값</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="ce">1</td>
+                            <td class="ce">javascript</td>
+                            <td class="ce">toUpperCase</td>
+                            <td class="ce">JAVASCRIPT</td>
+                        </tr>
+                        <tr>
+                            <td class="ce">2</td>
+                            <td class="ce">JAVASCRIPT</td>
+                            <td class="ce">toLowerCase</td>
+                            <td class="ce">javascript</td>
+                        </tr>
+                    </tbody>
+                </table><br>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript reference"
+<pre><code class="language.js">    const str1 = "javascript";
+    const currentStr1 = str1.toUpperCase();
 
-    const currentStr1 = str1.indexOf("javascipt")             // 00
-    const currentStr2 = str1.indexOf("reference")            // 11
-    const currentStr3 = str1.indexOf("j")                           // 0
-    const currentStr4  = str1.indexOf("a")                         // 1
-    const currentStr5 = str1.indexOf("v")                          // 2
-    const currentStr6 = str1.indexOf("jqeurey")                // -1
-    const currentStr8 = str1.indexOf("javascipt", 0)         // 0
-    const currentStr9 = str1.indexOf("javascipt", 1)         // -1
-    const currentStr10 = str1.indexOf("reference", 0)      // 11
-    const currentStr11 = str1.indexOf("reference", 1)      // 11
-    const currentStr12 = str1.indexOf("reference", 11)    // 11
-    const currentStr13 = str1.indexOf("reference", 12)    // -1
+    document.querySelector(".sample02_N1").innerHTML = "1";
+    document.querySelector(".sample02_Q1").innerHTML = "javascript";
+    document.querySelector(".sample02_M1").innerHTML = "toUpperCase";
+    document.querySelector(".sample02_P1").innerHTML = currentStr1;
+
+    const str2 = "JAVASCRIPT";
+    const currentStr2 = str1.toLowerCase();
+
+    document.querySelector(".sample02_N2").innerHTML = "2";
+    document.querySelector(".sample02_Q2").innerHTML = "JAVASCRIPT";
+    document.querySelector(".sample02_M2").innerHTML = "toLowerCase";
+    document.querySelector(".sample02_P2").innerHTML = currentStr2;
 </code></pre>
                 </div>
             </div>
